# TeleCloud

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.pri  common.pri  config.pri  lib.pri  mkdir.pri  telegrambot.pro
.github/workflows/: build.yaml
config/: CMakeLists.txt  auth.example.ini  config.example.ini  config.pro
include/: httpserver.h  qdelegate.h  sslserver.h  telegrambot-gui  telegrambotlib-qt-fork
src/: CMakeLists.txt  src.pro
src/libs/: CMakeLists.txt  libs.pro  telegrambot_patched.cpp  telegrambotlib-qt-fork.pro
src/main/: main.cpp  main.pro
src/telegrambot-gui/: CMakeLists.txt  botcontroller.cpp  botcontroller.h  dbmanager.cpp  dbmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagebroker.cpp  messagebroker.h  object_script.telegrambot  resources.qrc  telegrambot-gui.pro  telegrambotgui.cpp  telegrambotgui.h  types.h
src/telegrambot-gui/resources/: appicon.rc
tests/: CMakeLists.txt  tst_dbmanager.cpp
tools/: generate_mock_data.py  tools.pro
